[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/areas/area3_1.gd" type="Script" id=1]
[ext_resource path="res://images/line4.png" type="Texture" id=2]
[ext_resource path="res://objects/pinion1.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/coin.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "pinion3"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 105.544, 863.145 ), Vector2( 529.372, 859.922 ), Vector2( 105.544, 863.145 ) ]
}

[sub_resource type="Animation" id=2]

length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 107.531, 566.985 ), Vector2( 529.748, 566.985 ), Vector2( 107.531, 566.985 ) ]
}

[sub_resource type="Animation" id=3]

length = 6.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 112.42, 295.064 ), Vector2( 529.803, 296.675 ), Vector2( 110.809, 295.064 ) ]
}

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="line4" type="Sprite" parent="." index="0"]

position = Vector2( 322.305, 297.063 )
z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="line5" type="Sprite" parent="." index="1"]

position = Vector2( 320.693, 567.797 )
z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="line6" type="Sprite" parent="." index="2"]

position = Vector2( 314.247, 861.093 )
z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="pinion3" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 410.144, 860.829 )
scale = Vector2( 0.449525, 0.449525 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="animation3" type="AnimationPlayer" parent="pinion3" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/pinion3 = SubResource( 1 )
blend_times = [  ]

[node name="pinion2" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 189.144, 566.985 )
scale = Vector2( 0.473578, 0.473578 )

[node name="animation2" type="AnimationPlayer" parent="pinion2" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/pinion2 = SubResource( 2 )
blend_times = [  ]

[node name="pinion1" parent="." index="5" instance=ExtResource( 3 )]

position = Vector2( 180.711, 295.327 )
scale = Vector2( 0.494194, 0.494194 )

[node name="animation1" type="AnimationPlayer" parent="pinion1" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/pinion1 = SubResource( 3 )
blend_times = [  ]

[node name="Node2D" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 268.017, 692.388 )

[node name="Node2D2" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 268.805, 398.886 )


